--- a/02_04/02_04.ipynb
+++ b/02_04/02_04.ipynb
@@ -88,7 +88,7 @@
     "pip install langchainhub"
    ]
   },
-{
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5f9fcee4",
@@ -108,10 +108,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "519d6515",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ignoring wrong pointing object 6 0 (offset 0)\n",
+      "Ignoring wrong pointing object 8 0 (offset 0)\n",
+      "Ignoring wrong pointing object 12 0 (offset 0)\n",
+      "Ignoring wrong pointing object 21 0 (offset 0)\n",
+      "Ignoring wrong pointing object 6 0 (offset 0)\n",
+      "Ignoring wrong pointing object 8 0 (offset 0)\n",
+      "Ignoring wrong pointing object 18 0 (offset 0)\n",
+      "Ignoring wrong pointing object 6 0 (offset 0)\n",
+      "Ignoring wrong pointing object 8 0 (offset 0)\n",
+      "Ignoring wrong pointing object 18 0 (offset 0)\n",
+      "Ignoring wrong pointing object 6 0 (offset 0)\n",
+      "Ignoring wrong pointing object 8 0 (offset 0)\n",
+      "Ignoring wrong pointing object 18 0 (offset 0)\n",
+      "Ignoring wrong pointing object 6 0 (offset 0)\n",
+      "Ignoring wrong pointing object 8 0 (offset 0)\n",
+      "Ignoring wrong pointing object 18 0 (offset 0)\n",
+      "Ignoring wrong pointing object 6 0 (offset 0)\n",
+      "Ignoring wrong pointing object 8 0 (offset 0)\n",
+      "Ignoring wrong pointing object 18 0 (offset 0)\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.document_loaders import PyPDFLoader\n",
     "\n",
@@ -141,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "fdd67ee4",
    "metadata": {},
    "outputs": [],
@@ -157,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "a18866b9",
    "metadata": {},
    "outputs": [],
@@ -167,17 +193,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "af6206ad",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "42"
+       "43"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "6aaee8ff-3ab2-419e-b879-7f3a78e0367a",
    "metadata": {},
    "outputs": [],
@@ -209,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "8e0bc507-958b-4cab-a50f-1e0408ed9896",
    "metadata": {},
    "outputs": [],
@@ -219,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "7373ef94-cd06-4e92-bafe-ba7c032f4232",
    "metadata": {},
    "outputs": [],
@@ -231,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "39e0f3c4-5981-4fad-8c81-0969b2f4d34f",
    "metadata": {},
    "outputs": [
@@ -239,7 +265,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42\n"
+      "43\n"
      ]
     }
    ],
@@ -260,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "0788aef1-0fe8-4205-ba3d-741bb5cf392a",
    "metadata": {},
    "outputs": [],
@@ -271,7 +297,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -285,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
