retriver and chaining

--- a/04_01/04_01.ipynb
+++ b/04_01/04_01.ipynb
@@ -88,7 +88,7 @@
     "pip install langchainhub"
    ]
   },
-{
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5f9fcee4",
@@ -108,14 +108,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "id": "b694cfeb-1653-4555-84ce-875b3885150f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_output(docs):\n",
-    "    for doc in docs:\n",
-    "        print('The output is: {}. \\n\\nThe metadata is {} \\n\\n'.format(doc.page_content, doc.metadata))    "
+    "def print_output(docs,type:int=1):\n",
+    "    import textwrap\n",
+    "    match type:\n",
+    "        case 1:\n",
+    "            for doc in docs:\n",
+    "                print('The medatadata is: {}'.format(doc.metadata))\n",
+    "                for t in textwrap.wrap(doc.page_content,width=100):\n",
+    "                    print(t)\n",
+    "        case 2:\n",
+    "            #print('The medatadata is: {}'.format(docs.response_metadata))\n",
+    "            for t in textwrap.wrap(docs.content,width=100):\n",
+    "                print(t)\n"
    ]
   },
   {
@@ -128,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "77f69144-98d1-46a1-94be-8eea00065278",
    "metadata": {},
    "outputs": [],
@@ -151,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "c71c0d74-1911-4082-8bc2-c930607fb800",
    "metadata": {},
    "outputs": [],
@@ -164,45 +173,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "id": "67a63a96-ddfb-4beb-a699-d2c035ae67cb",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "AIMessage(content='The Voynich manuscript is a mysterious 15th-century book written in an unknown script and containing illustrations of plants, astronomical diagrams, and human figures. While the manuscript has not been deciphered and its contents remain a mystery, some researchers have speculated that it may contain medicinal insights.\\n\\nSome interpretations suggest that the illustrations of plants in the manuscript could be botanical drawings and that the text may contain information about their medicinal properties and uses. Some researchers have also proposed that the manuscript may contain information about alchemy, astrology, or other esoteric practices that were believed to have medicinal benefits in medieval times.\\n\\nHowever, without a definitive translation of the text, it is impossible to know for certain what insights, if any, the Voynich manuscript may contain about medicine. The manuscript continues to intrigue researchers and scholars, and efforts to decipher its contents are ongoing.', response_metadata={'token_usage': {'completion_tokens': 170, 'prompt_tokens': 19, 'total_tokens': 189}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': 'fp_c2295e73ad', 'finish_reason': 'stop', 'logprobs': None})"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The medatadata is: {'token_usage': {'completion_tokens': 184, 'prompt_tokens': 19, 'total_tokens': 203, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}\n",
+      "The Voynich manuscript, a mysterious and undeciphered text dating back to the 15th century, has been\n",
+      "the subject of much speculation and study by historians, linguists, and cryptographers. While the\n",
+      "exact contents and purpose of the manuscript remain unknown, some researchers have suggested that it\n",
+      "may contain information related to medicinal herbs and plants.  One theory is that the Voynich\n",
+      "manuscript is a botanical or herbal guide, containing detailed illustrations and descriptions of\n",
+      "various plants and their medicinal uses. Some researchers have identified similarities between the\n",
+      "illustrations in the manuscript and known plant species, leading to speculation that it may contain\n",
+      "valuable information about traditional medicine practices from the time period.  However, without a\n",
+      "definitive translation or understanding of the text, these claims remain speculative and unproven.\n",
+      "The Voynich manuscript continues to be a source of fascination and mystery for scholars and\n",
+      "enthusiasts alike, with its true purpose and contents remaining elusive.\n"
+     ]
     }
    ],
    "source": [
     "#prompt the model with no additional knowledge of the Voynich manuscript beyond pretraining \n",
-    "llm.invoke(\"What are the medicinal insights from the Voynich manuscript?\")  "
+    "docs = llm.invoke(\"What are the medicinal insights from the Voynich manuscript?\")\n",
+    "#print(docs.pretty_print())\n",
+    "print_output(docs,2)\n",
+    "#print "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "id": "135b5589-664b-4ce7-aa2f-d593e9758c25",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "AIMessage(content='Aetherfloris Ventus is a term that does not have a specific meaning or definition in mainstream English or any known language. It may be a made-up or fictional term used in a specific context or fictional universe.', response_metadata={'token_usage': {'completion_tokens': 44, 'prompt_tokens': 16, 'total_tokens': 60}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': 'fp_c2295e73ad', 'finish_reason': 'stop', 'logprobs': None})"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aetherfloris Ventus is a Latin term that translates to \"airflower wind\" in English. It could\n",
+      "potentially refer to a specific type of wind or air current that is associated with the presence of\n",
+      "flowers or a floral scent. However, without further context, it is difficult to determine a specific\n",
+      "meaning for the term.\n"
+     ]
     }
    ],
    "source": [
-    "llm.invoke(\"What is Aetherfloris Ventus?\")"
+    "docs = llm.invoke(\"What is Aetherfloris Ventus?\")\n",
+    "print_output(docs,2)"
    ]
   },
   {
@@ -215,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "id": "0788aef1-0fe8-4205-ba3d-741bb5cf392a",
    "metadata": {},
    "outputs": [],
@@ -240,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 49,
    "id": "1ec80ca7-918a-4898-b64d-4cee56d8141a",
    "metadata": {},
    "outputs": [],
@@ -259,10 +280,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 46,
    "id": "3390bcda-1b75-4eaf-96b6-73c583c08760",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/python/3.12.1/lib/python3.12/site-packages/langsmith/client.py:261: LangSmithMissingAPIKeyWarning: API key must be provided when using hosted LangSmith API\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain import hub\n",
     "\n",
@@ -271,17 +301,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 47,
    "id": "dbe8886a-c809-428c-b2ff-b8d4c1b933f7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ChatPromptTemplate(input_variables=['context', 'question'], metadata={'lc_hub_owner': 'rlm', 'lc_hub_repo': 'rag-prompt', 'lc_hub_commit_hash': '50442af133e61576e74536c6556cefe1fac147cad032f4377b60c436e6cdcb6e'}, messages=[HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['context', 'question'], template=\"You are an assistant for question-answering tasks. Use the following pieces of retrieved context to answer the question. If you don't know the answer, just say that you don't know. Use three sentences maximum and keep the answer concise.\\nQuestion: {question} \\nContext: {context} \\nAnswer:\"))])"
+       "ChatPromptTemplate(input_variables=['context', 'question'], input_types={}, partial_variables={}, metadata={'lc_hub_owner': 'rlm', 'lc_hub_repo': 'rag-prompt', 'lc_hub_commit_hash': '50442af133e61576e74536c6556cefe1fac147cad032f4377b60c436e6cdcb6e'}, messages=[HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['context', 'question'], input_types={}, partial_variables={}, template=\"You are an assistant for question-answering tasks. Use the following pieces of retrieved context to answer the question. If you don't know the answer, just say that you don't know. Use three sentences maximum and keep the answer concise.\\nQuestion: {question} \\nContext: {context} \\nAnswer:\"), additional_kwargs={})])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 50,
    "id": "89b37521-0732-49cd-996c-5a955d64df24",
    "metadata": {},
    "outputs": [],
@@ -322,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 51,
    "id": "33d8b346-435b-4d50-a9b3-729e90bde815",
    "metadata": {},
    "outputs": [
@@ -330,7 +360,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Voynich manuscript contains detailed anatomical diagrams of mythical beings with annotations on organ functions, possibly used for medicinal or alchemical purposes. The manuscript also features depictions of mysterious herbs with unique properties, suggesting their medicinal uses. Additionally, the manuscript includes illustrations of herbal brews and potions with specific effects, blending the alchemy of flavors with practical pharmacology."
+      "The Voynich Manuscript contains detailed anatomical diagrams of mythical beings, possibly conveying ancient medical knowledge intertwined with fantasy. The manuscript may serve as a guide for medicinal and alchemical uses, with the organs of mythical creatures believed to possess magical properties. The Herbal Remedies section showcases diverse herbs illustrated with detailed annotations on their healing properties and potential medicinal uses."
      ]
     }
    ],
@@ -341,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 52,
    "id": "6667483b-9d8d-46f7-bbf9-7417249da5a0",
    "metadata": {},
    "outputs": [
@@ -349,7 +379,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Aetherfloris Ventus is a delicate, ethereal plant with petals lighter than air, appearing to float freely. Its stem is nearly invisible, dancing with the breeze in a delicate ballet. Extracts from Aetherfloris Ventus are believed to induce levity in body and mind."
+      "Aetherfloris Ventus is a celestial flora with petals lighter than air, appearing to float freely. Its nearly invisible stem dances with the breeze, leading the petals in a delicate ballet. The essence of Aetherfloris Ventus, captured in rare vials, is said to bestow the gift of lightness upon those who partake."
      ]
     }
    ],
@@ -360,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 53,
    "id": "93d4f8e0-14cb-40d0-b710-542d27c31bc9",
    "metadata": {},
    "outputs": [
@@ -368,7 +398,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The most important part of the Voynich manuscript is the detailed anatomical diagrams of mythical beings, possibly used for medicinal or alchemical purposes. These illustrations offer a glimpse into ancient medical knowledge intertwined with fantasy and provide insights into the functions of various organs and their importance in practices like alchemy and medicine. The annotations accompanying the diagrams suggest practical applications for these fantastical anatomical structures."
+      "The most important part of the Voynich manuscript is the detailed anatomical diagrams of mythical beings, which possibly served medicinal or alchemical purposes and include annotations explaining the function of each organ and system. These diagrams offer insights into ancient medical knowledge intertwined with fantasy, showcasing the manuscript creator's meticulous attention to detail and vivid imagination. The fusion of plant and animal features in the manuscript may carry deeper symbolic or mythological meanings, reflecting ancient beliefs about the unity and connectivity of all life forms."
      ]
     }
    ],
@@ -388,7 +418,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -402,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
