--- a/04_03/04_03.ipynb
+++ b/04_03/04_03.ipynb
@@ -88,7 +88,7 @@
     "pip install langchainhub"
    ]
   },
-{
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5f9fcee4",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "id": "77f69144-98d1-46a1-94be-8eea00065278",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "id": "c71c0d74-1911-4082-8bc2-c930607fb800",
    "metadata": {},
    "outputs": [],
@@ -144,17 +144,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "id": "67a63a96-ddfb-4beb-a699-d2c035ae67cb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='The Voynich manuscript is a mysterious and undeciphered text that is believed to date back to the 15th century. It contains illustrations of plants, astrological symbols, and mysterious text that has yet to be translated. Some researchers have suggested that the manuscript could contain medicinal insights, as it appears to depict various plants and herbs that may have been used for medicinal purposes in medieval times.\\n\\nHowever, without a clear understanding of the text contained in the manuscript, it is difficult to determine the exact medicinal insights that may be present. Some researchers have proposed that the illustrations of plants in the manuscript could be a form of early botanical knowledge, potentially containing information on herbal remedies and medicinal practices of the time.\\n\\nOverall, while the Voynich manuscript remains a fascinating and enigmatic text, its true medicinal insights remain unknown until the text can be successfully deciphered.', response_metadata={'token_usage': {'completion_tokens': 173, 'prompt_tokens': 19, 'total_tokens': 192}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': 'fp_c2295e73ad', 'finish_reason': 'stop', 'logprobs': None})"
+       "AIMessage(content='The Voynich manuscript is a mysterious 15th-century manuscript written in an unknown script and language. Many researchers and scholars have tried to decipher its contents, but its meaning remains a mystery.\\n\\nSome researchers believe that the manuscript contains information about medicinal plants and herbal remedies. They point to the detailed illustrations of plants and herbs in the manuscript, as well as the presence of what appear to be instructions for preparing medicines.\\n\\nHowever, without a clear understanding of the language and script used in the manuscript, it is impossible to know for certain what medicinal insights it may contain. Some researchers have suggested that the manuscript may contain knowledge of unknown plants or alternative medicinal practices that could be of interest to modern medicine.\\n\\nOverall, the medicinal insights from the Voynich manuscript remain speculative and unproven until the manuscript can be deciphered and its contents fully understood.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 170, 'prompt_tokens': 19, 'total_tokens': 189, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-cab2bc1d-e07c-4350-8d44-f2ab01122efe-0', usage_metadata={'input_tokens': 19, 'output_tokens': 170, 'total_tokens': 189, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,17 +166,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "id": "135b5589-664b-4ce7-aa2f-d593e9758c25",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='Aetherfloris Ventus is a term that appears to be a combination of Latin words, translating to \"ether flower wind\" in English. It could be a creative or poetic description of a floral scent carried by the wind, or it could be a name given to a specific product or concept related to flowers and wind. Without more context, it is difficult to determine the specific meaning of Aetherfloris Ventus.', response_metadata={'token_usage': {'completion_tokens': 85, 'prompt_tokens': 16, 'total_tokens': 101}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': 'fp_c2295e73ad', 'finish_reason': 'stop', 'logprobs': None})"
+       "AIMessage(content='Aetherfloris Ventus is a Latin term that translates to \"ether flower wind.\" It is a poetic and imaginative expression that combines elements of the ethereal (ether), floral (flower), and windy (wind) aspects of nature. It conveys a sense of beauty, movement, and fragility, capturing the essence of the natural world in a mystical and enchanting way.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 78, 'prompt_tokens': 16, 'total_tokens': 94, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-f6dc38b5-3baf-4177-bfce-07ec985ef5fc-0', usage_metadata={'input_tokens': 16, 'output_tokens': 78, 'total_tokens': 94, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "id": "0788aef1-0fe8-4205-ba3d-741bb5cf392a",
    "metadata": {},
    "outputs": [],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "id": "1ec80ca7-918a-4898-b64d-4cee56d8141a",
    "metadata": {},
    "outputs": [],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "id": "732ea316-19cb-435f-b822-fb0647925980",
    "metadata": {},
    "outputs": [],
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "id": "5c79f88f-5924-4f52-ab0e-3825e16b2be7",
    "metadata": {},
    "outputs": [],
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "id": "2b0088c4-b593-404e-a9d5-36649862efe2",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Aetherfloris Ventus is a celestial plant with petals lighter than air, appearing to float freely, nurtured by the breath of the winds and whispers of the clouds. Its nearly invisible stem dances with the breeze, leading the petals in a delicate ballet, inspiring myths and legends. In the realm of alchemy, its essence is treasured for bestowing lightness upon those who partake.\n"
+      "Aetherfloris Ventus is a celestial flora with petals lighter than air, appearing to float freely, nurtured by the whispers of the clouds. It is a plant of ethereal beauty, with nearly invisible stems dancing with the breeze, inspiring myths and legends. In the realm of alchemy, its essence is believed to bestow the gift of lightness upon those who partake.\n"
      ]
     }
    ],
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "id": "b75d4d60-4b6b-49c6-a876-0a98bb2fbf5a",
    "metadata": {},
    "outputs": [
@@ -341,7 +341,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A single drop of Aetherfloris Ventus can lift spirits, freeing the mind from earthly burdens, encouraging thoughts to soar and dreams to take flight. Its essence, captured in rare vials, is believed to bestow the gift of lightness upon those who partake, inspiring a sense of weightlessness and freedom. The true nature of Aetherfloris Ventus eludes even dedicated seekers, remaining a mysterious treasure in the natural world.\n"
+      "A single drop of Aetherfloris Ventus is said to lift the spirits, freeing the mind from earthly burdens, encouraging thoughts to soar and dreams to take flight. It bestows the gift of lightness upon those who partake, allowing them to transcend the physical realm and experience a sense of weightlessness. The true nature of Aetherfloris Ventus remains a mystery, even to dedicated seekers, reminding us of the unknown wonders of the natural world.\n"
      ]
     }
    ],
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "id": "67bfb493-0c2c-454d-8328-b83aed28406c",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Aetherfloris Ventus is a celestial plant with light petals that appear to float freely, nurtured by wind and clouds, while Noctis Umbraherba is a shadowy plant thriving in darkness, with leaves that absorb shadows and blossoms blooming only at night. Aetherfloris Ventus embodies the essence of the sky, while Noctis Umbraherba is a plant shrouded in mystery, a whispered legend in botany.\n"
+      "Aetherfloris Ventus is a celestial plant with light petals that dance with the breeze, embodying ethereal beauty and inspiring myths. In contrast, Noctis Umbraherba is a dark, shadowy plant that thrives in darkness, its leaves absorbing shadows, and its nocturnal blossoms blooming under the cover of darkness. The two plants represent opposite ends of the natural spectrum, one light and ethereal, the other dark and mysterious.\n"
      ]
     }
    ],
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "id": "e2b60c6b-57bc-44da-9706-0060095635e3",
    "metadata": {},
    "outputs": [
@@ -382,7 +382,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Biological section of the Voynich Manuscript is crucial as it showcases a diversity of life forms, both creatures and plants, in a mysterious and enigmatic manner. It delves into intricate anatomical details, revealing complex and interconnected life systems that spark curiosity and exploration. The section not only demonstrates a blend of science and mystique but also provides a window into ancient perceptions of life, offering insights into how these beings and plants were understood and possibly utilized in various practices.\n"
+      "Yes, the Biological section of the Voynich Manuscript is significant as it offers a glimpse into a unique ecosystem where hybrid creatures blur the lines between flora and fauna, challenging traditional biological classification. The illustrations provide insights into ancient beliefs about the unity of all life forms and prompt contemplation of philosophical or alchemical messages. The detailed anatomical diagrams and annotations suggest a blend of scientific exploration and artistic expression, inviting speculation about the intended purposes of the drawings.\n"
      ]
     }
    ],
@@ -403,7 +403,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -417,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
